# llm-thematic-analysis

./: README.md  RUNIT.md
app/: CMakeLists.txt  README.md
app/src/: HTTPServer.cpp  HTTPServer.h  PluginProcessor.cpp  PluginProcessor.h  test.cpp
src/: 0_import.py  0a_import.py  0b_delete.py  0c_list.py  1_summarise.py  2a_tags.py  2a_to_3b.py  2b_clean_tags.py  2b_extract_embeddings.py  2b_refine_tags.py  2b_to_3b.py  2c_extract_embeddings.py  3_clustering.ipynb  3_clustering.py  3_themes.py  3a_cluster_analysis.py  3b_cluster_labels.py  3b_embeddings_to_clusters.py  4a_clusters_to_themes.py  4b_compute_theme_quote_splits.py  4b_plot_tags_with_themes.py  4b_theme_visualisation.py  4c_plot_tags_with_themes.py  4c_refine_themes.py  4d_plot_theme_embeddeings.py  4e_quote_promiscuity.py  4f_heatmap.py  4f_theme_distance_matrix.py  4g_dataset_theme_distance_plot.py  5a_describe_themes.py  6a_tag_stats.py  6b_theme_stats.py  run_all_stages.py  run_cluster_analysis.sh  ta_utils.py  test_ta.py  topic_seg.py  workflow.py
